# expense-bot-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Makefile  builder.Dockerfile
.github/workflows/: deploy.yml  lint.yml
include/: ai_client.hpp  config.hpp  connection_pool.hpp  db_processor.hpp  gemini_client.hpp  ollama_client.hpp  processor.hpp  receiver.hpp  replier.hpp  worker_pool.hpp
include/models/: expense.hpp
src/: config.cpp  connection_pool.cpp  db_processor.cpp  gemini_client.cpp  main.cpp  ollama_client.cpp  processor.cpp  receiver.cpp  replier.cpp  worker_pool.cpp
